02_deploy_nginx/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-container
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
      - containerPort: 8080
