02_deploy_nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx-container
  ports:
  - port: 31000
    targetPort: 80
    nodePort: 31000
    protocol: TCP
